--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1,11 +1,12 @@
 /*!
- * Bootstrap v2.3.2
+ * Bootstrap Rocket v1.1.0
  *
- * Copyright 2012 Twitter, Inc
+ * Copyright 2013 Lewis Healey
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
+ * Edited by @lewishealey
  */
  
  @import url(http://fonts.googleapis.com/css?family=Lato:900); /*font-family: 'Lato', sans-serif;*/
