--- a/assets/css/icon-hover.css
+++ b/assets/css/icon-hover.css
@@ -183,7 +183,6 @@ a.icon-youtube-play.icon-hover-color:hover {
    * causes vertical misalignment in Firefox. Here set middle to vertical-align
    * to "fix" it. See https://bugzilla.mozilla.org/show_bug.cgi?id=491549
    */
-  vertical-align: middle;
 }
 a > .icon-hover-slide, a > .icon-hover-flip, a > .icon-hover-color {
   display: inline-block;
@@ -274,6 +273,13 @@ a:hover > .icon-hover-flip:after, .icon-hover-flip:hover:after {
   -webkit-transform: perspective(100px) rotateY(0);
   transform: perspective(100px) rotateY(0);
 }
+
+/*
+ * Padding for icons in buttons
+ */
+
+.icon-left, .icon-left:after, .icon-left:before { padding-right: 10px;}
+.icon-left, .icon-right:after, .icon-right:before { padding-left: 10px;}
 
 /*
  * For Chrome. `backface-visibility: hidden` may not works if GPU acceleration
